--- a/portfoliobulma_contato.html
+++ b/portfoliobulma_contato.html
@@ -30,49 +30,50 @@
    </header>
    <section class="section">
       <div class="container">
-        <div class="columns is-mobile">
-          <div class="column">
-          <div class="card">
-            <div class="card-image">
-              <figure class="image is-4by3">
-                <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
-              </figure>
-            </div>
-            <div class="card-content">
-              <div class="media">
-                <div class="media-content">
-                  <p class="title is-4">Mari Sato</p>
-                  <p class="subtitle is-6">JavaScript Full Stack Developer</p>
-                </div>
-              </div>
+          <div class="columns">
+              <div class="column">
+                  <div class="card">
+                      <div class="card-image">
+                        <figure class="image is-4by3">
+                          <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                        </figure>
+                      </div>
+                      <div class="card-content">
+                        <div class="media">
+                          <div class="media-content">
+                            <p class="title is-4">Mari Sato</p>
+                            <span class="tag is-dark is-medium">JavaScript Full Stack Developer</span>
+                          </div>
+                        </div>
           
-              <div class="content">
-                <p>(+5561) 99432-7979</p>
-                <p>marisato19@gmail.com</p>
+                        <div class="content">
+                          <p>(+5561) 99432-7979</p>
+                          <p>marisato19@gmail.com</p>
+                        </div>
+                      </div>
+                  </div>
+            </div>
+            <div class="column is-9">
+              <div class="container">
+              <div class="field">
+              <label class="label">Email</label>
+              <div class="control">
+                  <input class="input" type="email" placeholder="e.g. alexsmith@gmail.com">
               </div>
+              <div class="field">
+                  <label class="label">Message</label>
+                  <div class="control">
+                    <textarea class="textarea" placeholder="Textarea"></textarea>
+                  </div>
+              </div>
+              <div class="control">
+                  <button class="button is-primary is-danger">Submit</button>
+              </div>
+              </div>  
             </div>
           </div>
         </div>
-
-        <div class="column is-9">
-          <div class="container">
-            <div class="field">
-            <label class="label">Email</label>
-            <div class="control">
-                <input class="input" type="email" placeholder="e.g. alexsmith@gmail.com">
-            </div>
-            <div class="field">
-                <label class="label">Message</label>
-                <div class="control">
-                  <textarea class="textarea" placeholder="Textarea"></textarea>
-                </div>
-            </div>
-            <div class="control">
-                <button class="button is-primary is-danger">Submit</button>
-            </div>
-          </div>  
-        </div>
       </div>
-    </section>
+   </section>
 </body>
 </html>
